@@ -1,6 +1,6 @@
 /* This is the Assembler Pre-Processor
    Copyright 1987, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998,
-   1999, 2000, 2001, 2002, 2003, 2005, 2006, 2007, 2008, 2009, 2010, 2012
+   1999, 2000, 2001, 2002, 2003, 2006, 2007
    Free Software Foundation, Inc.
 
    This file is part of GAS, the GNU Assembler.
@@ -214,7 +214,7 @@ static char *out_string;
 static char out_buf[20];
 static int add_newlines;
 static char *saved_input;
-static size_t saved_input_len;
+static int saved_input_len;
 static char input_buffer[32 * 1024];
 static const char *mri_state;
 static char mri_last_ch;
@@ -232,7 +232,7 @@ struct app_save
   char         out_buf[sizeof (out_buf)];
   int          add_newlines;
   char *       saved_input;
-  size_t       saved_input_len;
+  int          saved_input_len;
 #ifdef TC_M68K
   int          scrub_m68k_mri;
 #endif
@@ -258,7 +258,7 @@ app_push (void)
     saved->saved_input = NULL;
   else
     {
-      saved->saved_input = (char *) xmalloc (saved_input_len);
+      saved->saved_input = xmalloc (saved_input_len);
       memcpy (saved->saved_input, saved_input, saved_input_len);
       saved->saved_input_len = saved_input_len;
     }
@@ -275,7 +275,6 @@ app_push (void)
 
   state = 0;
   saved_input = NULL;
-  add_newlines = 0;
 
   return (char *) saved;
 }
@@ -295,7 +294,7 @@ app_pop (char *arg)
     saved_input = NULL;
   else
     {
-      gas_assert (saved->saved_input_len <= sizeof (input_buffer));
+      assert (saved->saved_input_len <= (int) (sizeof input_buffer));
       memcpy (input_buffer, saved->saved_input, saved->saved_input_len);
       saved_input = input_buffer;
       saved_input_len = saved->saved_input_len;
@@ -351,14 +350,14 @@ process_escape (int ch)
    machine, and saves its state so that it may return at any point.
    This is the way the old code used to work.  */
 
-size_t
-do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
+int
+do_scrub_chars (int (*get) (char *, int), char *tostart, int tolen)
 {
   char *to = tostart;
   char *toend = tostart + tolen;
   char *from;
   char *fromend;
-  size_t fromlen;
+  int fromlen;
   register int ch, ch2 = 0;
   /* Character that started the string we're working on.  */
   static char quotechar;
@@ -385,11 +384,11 @@ do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
 	 13: After seeing a vertical bar, looking for a second
 	     vertical bar as a parallel expression separator.
 #endif
-#ifdef TC_PREDICATE_START_CHAR
-	 14: After seeing a predicate start character at state 0, looking
-	     for a predicate end character as predicate.
-	 15: After seeing a predicate start character at state 1, looking
-	     for a predicate end character as predicate.
+#ifdef TC_IA64
+	 14: After seeing a `(' at state 0, looking for a `)' as
+	     predicate.
+	 15: After seeing a `(' at state 1, looking for a `)' as
+	     predicate.
 #endif
 #ifdef TC_Z80
 	 16: After seeing an 'a' or an 'A' at the start of a symbol
@@ -548,7 +547,7 @@ do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
 	     GET and PUT macros.  */
 	  {
 	    char *s;
-	    ptrdiff_t len;
+	    int len;
 
 	    for (s = from; s < fromend; s++)
 	      {
@@ -668,23 +667,13 @@ do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
 	     line from just after the first white space.  */
 	  state = 1;
 	  PUT ('|');
-#ifdef TC_TIC6X
-	  /* "||^" is used for SPMASKed instructions.  */
-	  ch = GET ();
-	  if (ch == EOF)
-	    goto fromeof;
-	  else if (ch == '^')
-	    PUT ('^');
-	  else
-	    UNGET (ch);
-#endif
 	  continue;
 #endif
 #ifdef TC_Z80
 	case 16:
 	  /* We have seen an 'a' at the start of a symbol, look for an 'f'.  */
 	  ch = GET ();
-	  if (ch == 'f' || ch == 'F')
+	  if (ch == 'f' || ch == 'F') 
 	    {
 	      state = 17;
 	      PUT (ch);
@@ -713,8 +702,8 @@ do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
       /* flushchar: */
       ch = GET ();
 
-#ifdef TC_PREDICATE_START_CHAR
-      if (ch == TC_PREDICATE_START_CHAR && (state == 0 || state == 1))
+#ifdef TC_IA64
+      if (ch == '(' && (state == 0 || state == 1))
 	{
 	  state += 14;
 	  PUT (ch);
@@ -722,7 +711,7 @@ do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
 	}
       else if (state == 14 || state == 15)
 	{
-	  if (ch == TC_PREDICATE_END_CHAR)
+	  if (ch == ')')
 	    {
 	      state -= 14;
 	      PUT (ch);
@@ -916,11 +905,7 @@ do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
 	      PUT (' ');
 	      break;
 	    case 3:
-#ifndef TC_KEEP_OPERAND_SPACES
-	      /* For TI C6X, we keep these spaces as they may separate
-		 functional unit specifiers from operands.  */
 	      if (scrub_m68k_mri)
-#endif
 		{
 		  /* In MRI mode, we keep these spaces.  */
 		  UNGET (ch);
@@ -930,9 +915,7 @@ do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
 	      goto recycle;	/* Sp in operands */
 	    case 9:
 	    case 10:
-#ifndef TC_KEEP_OPERAND_SPACES
 	      if (scrub_m68k_mri)
-#endif
 		{
 		  /* In MRI mode, we keep these spaces.  */
 		  state = 3;
@@ -1330,12 +1313,12 @@ do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
 
 #ifdef TC_Z80
 	  /* "af'" is a symbol containing '\''.  */
-	  if (state == 3 && (ch == 'a' || ch == 'A'))
+	  if (state == 3 && (ch == 'a' || ch == 'A')) 
 	    {
 	      state = 16;
 	      PUT (ch);
 	      ch = GET ();
-	      if (ch == 'f' || ch == 'F')
+	      if (ch == 'f' || ch == 'F') 
 		{
 		  state = 17;
 		  PUT (ch);
@@ -1344,7 +1327,7 @@ do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
 	      else
 		{
 		  state = 9;
-		  if (ch == EOF || !IS_SYMBOL_COMPONENT (ch))
+		  if (!IS_SYMBOL_COMPONENT (ch)) 
 		    {
 		      if (ch != EOF)
 			UNGET (ch);
@@ -1366,7 +1349,7 @@ do_scrub_chars (size_t (*get) (char *, size_t), char *tostart, size_t tolen)
 	      )
 	    {
 	      char *s;
-	      ptrdiff_t len;
+	      int len;
 
 	      for (s = from; s < fromend; s++)
 		{
